src/components/About/About.css
.about-profile-pic {
    width: 100%;
    filter: grayscale(1);
    transition: .3s;
}

.about-profile-pic:hover {
    filter: grayscale(0);
    transition: .3s;
}

.about-container {
    margin-top: 10px;
}

.about-container h1:hover {
    text-decoration: underline;
    cursor: pointer;
}

.about-pic-name {
    font-size: 4em;
    position: relative;
    top: -.8em;
    text-shadow: white 0px 0px 10px,  white 0px 0px 10px;
    text-align: end;
    font-family: 'Caveat';
    transform: rotate(-0.03turn);
}

